[project]
name = "barkingmonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyqt6>=6.10.2",
    "setuptools<71",
    "sounddevice>=0.5.5",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
]
